K1J-2010: Allow message handling when normal origin for blocked users